--- a/Employees/Shared/NavMenu.razor
+++ b/Employees/Shared/NavMenu.razor
@@ -7,6 +7,12 @@
     </div>
 </div>
 
+<div class="nav-item px-3">
+    <NavLink class="nav-link" href="generate-employees">
+        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true" />Mitarbeiter generieren
+    </NavLink>
+</div>
+
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
