--- a/Employees/Shared/NavMenu.razor
+++ b/Employees/Shared/NavMenu.razor
@@ -7,21 +7,29 @@
     </div>
 </div>
 
-<div class="nav-item px-3">
-    <NavLink class="nav-link" href="generate-employees">
-        <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true" />Mitarbeiter generieren
-    </NavLink>
-</div>
-
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
-        </div>        
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="counter">
+                <span class="oi oi-plus" aria-hidden="true"></span> Zähler
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="generate-employees">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true" />Mitarbeiter generieren
+            </NavLink>
+        </div>
+
     </nav>
 </div>
+
+
 
 @code {
     private bool collapseNavMenu = true;
