--- a/Employees/Shared/NavMenu.razor
+++ b/Employees/Shared/NavMenu.razor
@@ -16,7 +16,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Zähler
+                <span class="oi oi-plus" aria-hidden="true"></span> Mitarbeiter generieren
             </NavLink>
         </div>
 
